--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Seja bem vindo ao meu site</h1>
+<h2>Meu nome é Benício Buhrer</h2>
+<p>Sou um aluno do Projeto Talento Tech</p>
 
 </body>
 </html>
