--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>Seja bem vindo ao meu site</h1>
+<h1>Seja bem vindo ao meu site!</h1>
 <h2>Meu nome é Benício Buhrer</h2>
 <p>Sou um aluno do Projeto Talento Tech</p>
 
